tests/compiler/errors/const_fn_cycle.casa
# expect: Cycle detected
const fn foo x:int -> int { x bar }
const fn bar x:int -> int { x foo }
const RESULT { 1 foo }
